tests/ui/coherence/super-traits/super-trait-knowable-1.current.stderr
error[E0119]: conflicting implementations of trait `Overlap<_>` for type `()`
  --> $DIR/super-trait-knowable-1.rs:16:1
   |
LL | impl<T, U: Sub<T>> Overlap<T> for U {}
   | ----------------------------------- first implementation here
LL | impl<T> Overlap<T> for () {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `()`
   |
   = note: downstream crates may implement trait `Sub<_>` for type `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
